--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -1,9 +1,10 @@
 ---
 import Dashboard from "../../layouts/Dashboard.astro";
-import Home from '../../components/Pages/Home.astro';
+import DropDown from '../../components/Repeat/Dropdown.astro'
+
+import Clock from '../../components/Nonrenew/Clock.astro'
 ---
 
 <Dashboard title='Home'>
-
-    <Home></Home>
+        <DropDown DWName="Test"> <div id="myDropdown" class="dropdown-content"><Clock></Clock></div> </DropDown>
 </Dashboard>
